# chatgpt-cli

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  history.c  history.h  main.c  main.h  openai-wrapper.c  openai-wrapper.h  version.h  version.h.in
